Enable -Xmx2G in run in build.sbt