@@ -10,6 +10,10 @@ lazy val semantic_forms_play = (project in file("."))
 scalaVersion := "2.11.8"
 javacOptions ++= Seq("-source","1.7", "-target","1.7")
 
+javaOptions in run ++= Seq(
+    "-Xms256M", "-Xmx2G", "-XX:MaxPermSize=1024M", "-XX:+UseConcMarkSweepGC")
+fork in run := true
+
 routesGenerator := StaticRoutesGenerator
 
 libraryDependencies += "org.scalatest" %% "scalatest" % "2.2.6" % Test
